2005-02-02  Jonathan Pryor <jonpryor@vt.edu>

	* StdioFileStream.cs: Fix Length property to actually return the size of the
	  file, not the # of bytes from the current position to EOF.  Oops.

2005-01-31  Jonathan Pryor <jonpryor@vt.edu>

	* Stdlib.cs: Import "msvcrt", not "libc".  These members are part of the
	  ANSI C standard, and thus should be present on Windows via msvcrt.dll
	  (except snprintf, until they catch up to C99).  Change the calling
	  convention of all functions to Cdecl, as the .NET default is Stdcall.
	  Changing the calling convention isn't needed in Syscall, as it can only be
	  run on Unix platforms anyway, where the default is Cdecl.
	* Syscall.cs: Add LIBC member that points to the real "libc"; we can't use
	  the imported definition from Stdlib as "msvcrt" doesn't exist on Unix.

2005-01-29  Jonathan Pryor <jonpryor@vt.edu>

	* Stdlib.cs: sys_* functions shouldn't be public.

2005-01-13  Jonathan Pryor <jonpryor@vt.edu>

	* make-map.cs: libMonoPosixHelper exports Mono_Posix prefixes, not Mono_Unix
	  prefixes, so change the type and namespace to generate compatible code.
	* Syscall.cs: Change OpenFlags values so they match the Linux values.

2005-01-13  Jonathan Pryor <jonpryor@vt.edu>

	* Stdlib.cs: Use Stdlib.LIBC instead of "libc".
	* StdioFileStream.cs: Add FilePosition property (not that I expect anyone to
	  use it) and Rewind() method.

2005-01-05  Jonathan Pryor <jonpryor@vt.edu>

	* StdioFileStream.cs: Added; System.IO.Stream wrapper for C FILE struct.
	* Stdlib.cs: Correct visibility of ftell().

2005-01-05  Jonathan Pryor <jonpryor@vt.edu>

	* Stdlib.cs: Re-order declarations to match the order used in the 
	  C99 Standard Annex B; Complete <stdio.h> exports (except for those not
	  worth supporting); Add non-"unsafe" versions of fread(3), fwrite(3) and
	  add some rudimentary buffer-overflow checking; Add <stdlib.h> exports such
	  as getenv(3), exit(3), rand(3), EXIT_SUCCESS, RAND_MAX, etc.
